# FM-Content

./: .env.example  .gitignore  CLAUDE.md  ONBOARDING.md  README.md  auto-poster-system-review-2026-05-12.md  blog-auto-poster-plan-2026-05-12.html  client_config.toml  firstmovers-blog-seo-report-2026-06-09.md  firstmovers-blogs-seo-audit-2026-06-11.md  firstmovers-content-engine-report.html  pyproject.toml
.github/workflows/: inventory-refresh-check.yml  (+1 more)
docs/: CLIENT-GOOGLE-CREDENTIALS-SOP.md  CLIENT-VPS-ACCESS.md  DEPLOYMENT-SOP.md  HOW-IT-WORKS.md  MAC-SETUP.md  SYSTEM-HANDOVER.md
scripts/: _run_one_draft.py
tests/: test_ahrefs.py  test_cannibalization.py  test_clickup.py  test_daily.py  test_daily_archive_filter.py  test_daily_clickup_idempotency.py  test_daily_rejection.py  test_discover_ahrefs_gap.py  test_discover_ga4_gap.py  test_discover_gsc.py  test_discover_searchable_aeo.py  test_e2e_smoke.py  test_ga4.py  test_inventory.py  test_push_wp.py  test_rank_math.py  test_rubric.py  test_slate.py
tools/: __init__.py  ahrefs.py  cannibalization.py  clickup.py  daily.py  draft.py  external_links.py  ga4.py  identities.py  images.py  internal_links.py  inventory.py  inventory_refresh.py  push_archive.py  push_wp.py  rank_math.py  rubric.py  schemas.py  slate.py
workflows/: content-daily-idea-loop.md  content-daily-idea.md  content-inventory-refresh.md  content-poll-and-draft-loop.md  content-poll-and-draft.md  content-sunday-slate.md  content-title-approval.md  content-wednesday-draft.md  health-report.md  heartbeat-canary.md  schedule-registration.md
(+65 files in other folders)
